initial credits renaming